2006-02-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h
	(lll_robust_mutex_unlock): Avoid unnecessary wakeups.
	* sysdeps/unix/sysv/linux/i386/lowlevellock.h
	(lll_robust_mutex_unlock): Likewise.

2006-02-13  Jakub Jelinek  <jakub@redhat.com>

	* descr.h [!__PTHREAD_MUTEX_HAVE_PREV] (DEQUEUE_MUTEX):
	Set robust_list.__next rather than robust_list.
	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h
	(__pthread_list_t): New typedef.
	(pthread_mutex_t): Replace __next and __prev fields with __list.
	* sysdeps/unix/sysv/linux/ia64/bits/pthreadtypes.h
	(__pthread_list_t): New typedef.
	(pthread_mutex_t): Replace __next and __prev fields with __list.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h
	(__pthread_list_t, __pthread_slist_t): New typedefs.
	(pthread_mutex_t): Replace __next and __prev fields with __list.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h
	(__pthread_list_t, __pthread_slist_t): New typedefs.
	(pthread_mutex_t): Replace __next and __prev fields with __list.
	* sysdeps/unix/sysv/linux/sparc/bits/pthreadtypes.h
	(__pthread_list_t, __pthread_slist_t): New typedefs.
	(pthread_mutex_t): Replace __next and __prev fields with __list.
	* sysdeps/unix/sysv/linux/sh/bits/pthreadtypes.h
	(__pthread_slist_t): New typedef.
	(pthread_mutex_t): Replace __next field with __list.

2006-02-15  Ulrich Drepper  <drepper@redhat.com>

	* pthreadp.h: Define PTHREAD_MUTEX_INCONSISTENT instead of
	PTHREAD_MUTEX_OWNERDEAD.
	(PTHREAD_MUTEX_ROBUST_PRIVATE_NP): Define as 16, not 256.
	Define FUTEX_WAITERS, FUTEX_OWNER_DIED, FUTEX_TID_MASK.
	* Makefile (libpthread-routines): Add lowlevelrobustlock.
	* pthread_create.c (start_thread): Very much simplify robust_list loop.
	* pthread_mutex_consistent.c: Inconsistent mutex have __owner now set
	to PTHREAD_MUTEX_INCONSISTENT.
	* pthread_mutex_destroy.c: Allow destroying of inconsistent mutexes.
	* pthread_mutex_lock.c: Reimplement robust mutex handling.